2018-06-03  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/unique.m: Overload base function

	* arrays/@stk_dataframe/unique.m: Overload base function.
	Yesterday's commit was intended to avoid this overload.  It work
	in matlab, but not in Octave, so here it is...
	* arrays/@stk_dataframe/sort.m: Remove unit test.

2018-06-02  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/sort.m: Behave more like the base sort() function

	* arrays/@stk_dataframe/sort.m: Behave more like the base sort()
	function.  In particular, accept optional arguments, and deal with
	that fact that the dimension argument is allowed to be skipped.

2018-05-22  Julien Bect  <julien.bect@centralesupelec.fr>

	Use UNIX-type EOL

	* examples/03_miscellaneous/stk_example_misc05.m: Use UNIX-type EOL.
	* param/estim/stk_param_loomse.m: Idem.
	* param/estim/stk_param_loopvc.m: Idem.

2018-05-22  Julien Bect  <julien.bect@centralesupelec.fr>

	Don't use UTF-8 in m-files

	* core/@stk_model_gpposterior/stk_isnoisy.m: Remove UTF-8 character.
	* core/stk_isnoisy.m: Idem.
	* misc/benchmarks/stk_benchmark_bivnorm.m: Idem.
	* param/estim/stk_param_loomse.m: Idem.
	* param/estim/stk_param_loopvc.m: Idem.

2018-05-22  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove nargin checks and update CG#01

	* admin/CODING_GUIDELINES: Update CG#01.
	* arrays/@stk_dataframe/max.m: Remove nargin check.
	* arrays/@stk_dataframe/min.m: Idem.
	* arrays/@stk_dataframe/plotmatrix.m: Idem.
	* arrays/@stk_dataframe/stk_boundingbox.m: Idem.
	* arrays/@stk_dataframe/stk_conditioning.m: Idem.
	* arrays/@stk_dataframe/stk_dataframe.m: Idem.
	* arrays/@stk_dataframe/stk_normalize.m: Idem.
	* arrays/@stk_factorialdesign/ndgrid.m: Idem.
	* arrays/@stk_factorialdesign/stk_boundingbox.m: Idem.
	* arrays/@stk_hrect/stk_boundingbox.m: Idem.
	* arrays/@stk_hrect/stk_hrect.m: Idem.
	* arrays/@stk_hrect/stk_normalize.m: Idem.
	* arrays/@stk_hrect/stk_rescale.m: Idem.